# PitWallAgent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: intent_router.py  planner.py  response_formatter.py  runtime_graph.py  tool_dispatcher.py
app/api/: agent.py  chat.py  news.py  race.py  router.py  rules.py  strategy.py
app/config/: settings.py
app/core/: logging.py  request_context.py
app/db/: engine.py  init_db.py  models.py
app/middleware/: access_log.py  request_context.py
app/repositories/: news_repository.py  rule_repository.py
app/schemas/: agent.py  chat.py  chunk.py  news.py  pdf.py  race.py  rag.py  rules.py  strategy.py
app/services/: agent_service.py  chat_service.py  chunker.py  context_builder.py  formula1_rss_source.py  general_answer_service.py  knowledge_service.py  memory_service.py  news_backfill_service.py  news_ingestion_service.py  news_insight_service.py  news_rule_analysis_service.py  news_service.py  news_source.py  pdf_reader.py  qa_service.py  race_provider.py  race_service.py  regulation_ingestion_service.py  session_service.py  strategy.py  text_cleaner.py
app/tools/: base.py  general_tool.py  news_tool.py  race_tool.py  regulation_tool.py  strategy_tool.py
data/evals/: agent_cases.jsonl
docs/: README.md
docs/cn/: 00_Project_Overview_zh.md  01_Product_Requirement_zh.md  03_Interview_Guide_zh.md  (+1 more)
frontend/: package-lock.json  package.json
scripts/: backfill_formula1_news_details.py  build_regulation_chunks.py  embed_regulation_chunks.py  import_news_articles.py  import_regulation_chunks.py  ingest_formula1_news.py  init_pgvector_db.py  resize_regulation_embedding_column.py  run_agent_eval.py  smoke_test_llm.py
tests/: conftest.py
(+71 files in other folders)
