[project]
name = "pitwall-agent"
version = "0.1.0"
description = "An AI-powered Formula 1 racing assistant based on LangGraph and RAG."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.138.2",
    "pypdf>=4.3.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
