[project]
name = "pitwall-agent"
version = "0.1.0"
description = "An AI-powered Formula 1 racing assistant based on LangGraph and RAG."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.138.2",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "langgraph>=1.2.7",
    "openai>=1.99.1",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.11.0",
    "pypdf>=4.3.1",
    "psycopg[binary]>=3.2.10",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.49.0",
    "myapplication>=0.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
